# clancy

./: CLAUDE.md  Cargo.toml  DESIGN.md  README.md  TRACKING.md
.claude/: context.md
src/: config.rs  extraction.rs  main.rs  project.rs  repl.rs  transcript.rs
